# meblog

./: .env.example  .gitignore  BLOG_STRATEGY.md  FEATURES.md  LICENSE  README.md  deploy-simple.sh  deploy-simple2.sh  deploy-test.sh  deploy-to-server.sh  deploy.sh  deploy.sh.example  deploy.sh.fixed2  docker-compose-backend-production.yml  docker-compose-backend-test.yml  docker-compose-frontend-production.yml  docker-compose-frontend-test.yml  docker-compose-production.yml  docker-compose-production.yml.build-args  docker-compose-test.yml  docker-compose.yml
backend/: .dockerignore  .env.example  .env.test  Dockerfile  Dockerfile.optimized  Dockerfile.simple  add_posts.py  create_tables.py  fix_content.py  migrate.sh  pyproject.toml  requirements-minimal.txt  requirements.txt  seed_rich_posts.py  test_connection.py
backend/app/: __init__.py  config.py  database.py  main.py
backend/app/api/: __init__.py  about.py  auth.py  comments.py  files.py  posts.py  project.py  projects.py  seo.py  settings.py  stats.py  tags.py
backend/app/crud/: __init__.py  category.py  comment.py  post.py  tag.py  user.py
backend/app/dao/: __init__.py  about.py  admin.py  comment.py  file_asset.py  post.py  project.py  settings.py  stats.py  tag.py  (+1 more)
backend/configs/: __init__.py  base.py  local.py  production.py  test.py
backend/migrations/: 001_author_settings.sql
backend/tests/: README_hidden_visibility_tests.md  conftest.py  hidden_visibility_readonly_check.sh  hidden_visibility_regression.sh  test_api_contract.py  test_auth.py  test_posts.py  test_projects.py  test_tags.py
(+283 files in other folders)
